--- a/html/css/style.css
+++ b/html/css/style.css
@@ -3,25 +3,27 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: "Microsoft JhengHei";
 }
 
 body{
+    height: 100vh;
+    display: flex;
     justify-content: center;
+    align-items: center;
+    background: linear-gradient(45deg,rgb(224, 207, 254), rgb(255, 239, 255) ) fixed;
 }
 
 .container{
     position: relative;
     width: 75rem;
-    
 }
 
-.container .background{
-    width:95rem;
+.container img{
+    width: 75rem;
 }
 
 .switch span{
-    color:rgb(131, 131, 131);
+    color:#ccc;
     font-size: 1.4rem;
     cursor: pointer;
 }
@@ -36,13 +38,9 @@ body{
     position: absolute;
     right:0;
     top:0;  
-    padding: 40px;
-    background: rgb(235, 235, 235);
-    border-radius: 10px;
+
     display: flex;
     justify-content: center;
-    box-sizing: border-box;
-    box-shadow: 0 15px 25px rgba(0,0,0,.5);
 }
 
 form{
@@ -59,21 +57,11 @@ form .input{
     transition: .4s;
 }
 
-.png{
-    width:30%;
-    left:35%;
-    position: relative;
-    border-radius: 10rem;
-}
-
-
 .input input{
     outline: none;
     width: 100%;
     border: none;
-    background-color: transparent;
     border-bottom: .1rem solid rgb(181, 154, 254);
-    font-size: 1.1rem;
 }
 
 .input::after{
@@ -83,28 +71,22 @@ form .input{
     top: -10%;
     font-size: 1.2rem;
     color: rgb(129, 101, 207);
-    transition: .4s;
+    transition: .3s;
     pointer-events: none;
 }
 
 .input.focus::after{
-    top:-70%;
+    top:-50%;
     font-size: .9rem;
 }
 
 .login .input#username,
 .login .input#repeat,
-.login .select
-{
+.login .select{
     margin: 0;
     height: 0;
     opacity: 0;
     width: 0;
-}
-
-.signup .png
-{
-    display:none;
 }
 
 .signup #forget{
@@ -117,6 +99,12 @@ form .input{
     top:35%；
 }
 
+form span{
+    display: block;
+    color:rgb(110, 89, 167);
+    font-size: .8rem;
+    cursor: pointer;
+}
 
 form button{
     border:none;
@@ -124,7 +112,7 @@ form button{
     margin: 1rem 0 0;
     width: 100%;
     height: 3rem;
-    border-radius: 0.6rem;
+    border-radius: 3rem;
     background: linear-gradient(90deg,rgb(181, 154, 254),rgb(245, 189, 253) );
     box-shadow: 0 0 8px rgb(181, 154, 254);
     cursor: pointer;
@@ -146,8 +134,6 @@ form .select {
     width: 100%;
     border: none;
     border-bottom: .1rem solid rgb(181, 154, 254);
-    font-size: 1.1rem;
-    background-color: transparent;
 }
 
 .select::after{
@@ -157,18 +143,17 @@ form .select {
     top: -10%;
     font-size: 1.2rem;
     color: rgb(129, 101, 207);
-    transition: all 0.35s ease;
+    transition: .3s;
     pointer-events: none;
 }
 
 .select.focus::after{
-    top:-70%;
+    top:-50%;
     font-size: .9rem;
 }
 
 .select .placeholder:hover {
-    
-    background-color: transparent;
+    background: #ffffff;
 }
 .select .placeholder:after {
     position: absolute;
@@ -182,19 +167,12 @@ form .select {
     display: block;
 }
 .select ul {
-    display: block;
-    opacity: 0;
+    display: none;
     position: absolute;
     overflow: hidden;
     width: 100%;
-<<<<<<< Updated upstream:login/css/style.css
-    background: rgb(255, 239, 255);
-    border-radius: 2px; 
-=======
-    background: rgba(235, 235, 235);
-    box-shadow: 0 10px 15px rgba(0,0,0,.5);
-    border-radius: 4px;
->>>>>>> Stashed changes:html/css/style.css
+    background: #fff;
+    border-radius: 2px;
     top: 100%;
     left: 0;
     list-style: none;
@@ -203,7 +181,7 @@ form .select {
     z-index: 100;
 }
 .select ul li {
-    opacity: 1;
+    display: block;
     text-align: left;
     padding: 0.8em 1em 0.8em 1em;
     color: rgb(129, 101, 207);
