--- a/html/css/style.css
+++ b/html/css/style.css
@@ -6,24 +6,21 @@
 }
 
 body{
-    height: 100vh;
-    display: flex;
     justify-content: center;
-    align-items: center;
-    background: linear-gradient(45deg,rgb(224, 207, 254), rgb(255, 239, 255) ) fixed;
 }
 
 .container{
     position: relative;
     width: 75rem;
+    
 }
 
-.container img{
-    width: 75rem;
+.container .background{
+    width:90rem;
 }
 
 .switch span{
-    color:#ccc;
+    color:rgb(131, 131, 131);
     font-size: 1.4rem;
     cursor: pointer;
 }
@@ -37,15 +34,19 @@ body{
     margin: 8rem 0 0;
     position: absolute;
     right:0;
-    top:0;  
-
+    top:-5%;  
+    padding: 40px;
+    background: rgba(235, 235, 235);
+    border-radius: 10px;
     display: flex;
     justify-content: center;
+    box-sizing: border-box;
+    box-shadow: 0 15px 25px rgba(0,0,0,.5);
 }
 
 form{
     width: 12rem;
-    margin: 3rem 0 0;
+    margin: 3rem 0 0;   
 }
 
 form .input{
@@ -57,11 +58,21 @@ form .input{
     transition: .4s;
 }
 
+.png{
+    width:30%;
+    left:35%;
+    position: relative;
+    border-radius: 10rem;
+}
+
+
 .input input{
     outline: none;
     width: 100%;
     border: none;
+    background-color: transparent;
     border-bottom: .1rem solid rgb(181, 154, 254);
+    font-size: 1.1rem;
 }
 
 .input::after{
@@ -71,22 +82,28 @@ form .input{
     top: -10%;
     font-size: 1.2rem;
     color: rgb(129, 101, 207);
-    transition: .3s;
+    transition: .4s;
     pointer-events: none;
 }
 
 .input.focus::after{
-    top:-50%;
+    top:-70%;
     font-size: .9rem;
 }
 
 .login .input#username,
 .login .input#repeat,
-.login .select{
+.login .select
+{
     margin: 0;
     height: 0;
     opacity: 0;
     width: 0;
+}
+
+.signup .png
+{
+    display:none;
 }
 
 .signup #forget{
@@ -99,12 +116,6 @@ form .input{
     top:35%；
 }
 
-form span{
-    display: block;
-    color:rgb(110, 89, 167);
-    font-size: .8rem;
-    cursor: pointer;
-}
 
 form button{
     border:none;
@@ -112,7 +123,7 @@ form button{
     margin: 1rem 0 0;
     width: 100%;
     height: 3rem;
-    border-radius: 3rem;
+    border-radius: 0.6rem;
     background: linear-gradient(90deg,rgb(181, 154, 254),rgb(245, 189, 253) );
     box-shadow: 0 0 8px rgb(181, 154, 254);
     cursor: pointer;
@@ -134,6 +145,8 @@ form .select {
     width: 100%;
     border: none;
     border-bottom: .1rem solid rgb(181, 154, 254);
+    font-size: 1.1rem;
+    background-color: transparent;
 }
 
 .select::after{
@@ -148,12 +161,13 @@ form .select {
 }
 
 .select.focus::after{
-    top:-50%;
+    top:-70%;
     font-size: .9rem;
 }
 
 .select .placeholder:hover {
-    background: #ffffff;
+    
+    background-color: transparent;
 }
 .select .placeholder:after {
     position: absolute;
@@ -171,8 +185,9 @@ form .select {
     position: absolute;
     overflow: hidden;
     width: 100%;
-    background: #fff;
-    border-radius: 2px;
+    background: rgba(235, 235, 235);
+    box-shadow: 0 10px 15px rgba(0,0,0,.5);
+    border-radius: 4px;
     top: 100%;
     left: 0;
     list-style: none;
