--- a/html/css/style.css
+++ b/html/css/style.css
@@ -60,8 +60,8 @@ form .input{
 }
 
 .png{
-    width:30%;
-    left:35%;
+    width:5rem;
+    left:30%;
     position: relative;
     border-radius: 10rem;
 }
