--- a/html/css/style.css
+++ b/html/css/style.css
@@ -1,4 +1,5 @@
 
+
 *{
     margin: 0;
     padding: 0;
@@ -205,3 +206,4 @@ form .select {
 .select ul li:hover {
     background: linear-gradient(90deg,rgb(181, 154, 254),rgb(245, 189, 253) );
     color: #fff;
+}
