--- a/html/css/barstyle.css
+++ b/html/css/barstyle.css
@@ -318,6 +318,33 @@ li.tagfocus a::after{
   
 }
 
+.shopcard .shopcard-clear{
+  display: block;
+  position: relative;
+  left:100%;
+  bottom:53%;
+}
+
+
+.shopcard .shopcard-clear button{
+  border: none;
+  cursor: pointer;
+  background-color: transparent;
+}
+.shopcard .shopcard-clear button:focus {
+  outline: 0;
+}
+
+.shopcard .shopcard-clear button i {
+  
+  font-size: 1rem;
+  color: #000000;
+}
+
+.shopcard .shopcard-clear button:hover i {
+  color: #006dbc;
+}
+
 .shopcard.on{
   display: flex;
 }
@@ -347,7 +374,6 @@ li.tagfocus a::after{
 }
 
 .shopcard .contain .imgBx::before {
-  content: 'Nike';
   position: absolute;
   top: 20px;
   left: 20px;
@@ -374,7 +400,7 @@ li.tagfocus a::after{
 }
 
 .shopcard .contain .details h2 {
-  margin: 0;
+  margin-bottom: 10%;
   padding: 0;
   font-size: 2.5em;
   line-height: 0.8em;
@@ -390,7 +416,7 @@ li.tagfocus a::after{
 .shopcard .contain .details p {
   font-weight:normal;
   max-width: 85%;
-  margin-left: 10%;
+  margin-left: 5%;
   color: #333;
   font-size: 15px;
 }
@@ -399,10 +425,10 @@ li.tagfocus a::after{
   padding: 0;
   font-size: 2.5em;
   color: #a2a2a2;
-  float: left;
+  float: right;
 }
 
-.shopcard .contain .details button {
+.shopcard .contain .details .context button {
   background: #006dbc;
   color: #fff;
   border: none;
@@ -616,60 +642,8 @@ li.tagfocus a::after{
     -webkit-box-shadow: 0 2px 0 rgba(0,0,0,0.045);
     box-shadow: 0 2px 0 rgba(0,0,0,0.045);
 }
-#book .accordion-menu {
-    width: 100%;
-    max-width: 350px;
-    margin: 0px auto 20px;
-    background: #fff;
-    border-radius: 4px;
-}
-#book .accordion-menu li.open .dropdownlink {
-    color: #CDDC39;
-    #book .fa-chevron-down {
-    transform: rotate(180deg);
-  }
-}
-#book .accordion-menu li:last-child .dropdownlink {
-    border-bottom: 0;
-}
-#book .dropdownlink {
-    cursor: pointer;
-    display: block;
-    padding: 15px 15px 15px 45px;
-    font-size: 18px;
-    border-bottom: 1px solid #ccc;
-    color: #212121;
-    position: relative;
-    transition: all 0.4s ease-out;
-i {
-    position: absolute;
-    top: 17px;
-    left: 16px;
-}
-#book .fa-chevron-down {
-    right: 12px;
-    left: auto;
-}
-}
 
-#book .submenuItems {
-    display: none;
-    background: #C8E6C9;
-li {
-    border-bottom: 1px solid #B6B6B6;
-}
-}
 
-#book .submenuItems a {
-    display: block;
-    color: #727272;
-    padding: 12px 12px 12px 45px;
-    transition: all 0.4s ease-out;
-&:hover {
-     background-color: #CDDC39;
-     color: #fff;
- }
-}
 
 
 
@@ -1227,4 +1201,236 @@ li {
     width: 0;
     border-top: 11.55px solid #ffc629;
   }
-  
+  #educationbar .myBtn{
+      width: 20%;
+      line-height: 1.499;
+      position: relative;
+      display: inline-block;
+      font-weight: 400;
+      white-space: nowrap;
+      text-align: center;
+      background-image: none;
+      border: 1px solid transparent;
+      -webkit-box-shadow: 0 2px 0 rgba(0,0,0,0.015);
+      box-shadow: 0 2px 0 rgba(0,0,0,0.015);
+      cursor: pointer;
+      -webkit-transition: all .3s cubic-bezier(.645, .045, .355, 1);
+      transition: all .3s cubic-bezier(.645, .045, .355, 1);
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+      -ms-touch-action: manipulation;
+      touch-action: manipulation;
+      height: 32px;
+      padding: 0 15px;
+      font-size: 14px;
+      border-radius: 4px;
+      color: rgba(0,0,0,0.65);
+      background-color: #fff;
+      border-color: #d9d9d9;
+      color: #fff;
+      background-color: #FF5A44;
+      border-color: #FF5A44;
+      text-shadow: 0 -1px 0 rgba(0,0,0,0.12);
+      -webkit-box-shadow: 0 2px 0 rgba(0,0,0,0.045);
+      box-shadow: 0 2px 0 rgba(0,0,0,0.045);
+  }
+  #educationbar .MyBtn{
+      line-height: 1.499;
+      position: relative;
+      display: inline-block;
+      font-weight: 400;
+      white-space: nowrap;
+      text-align: center;
+      background-image: none;
+      border: 1px solid transparent;
+      -webkit-box-shadow: 0 2px 0 rgba(0,0,0,0.015);
+      box-shadow: 0 2px 0 rgba(0,0,0,0.015);
+      cursor: pointer;
+      -webkit-transition: all .3s cubic-bezier(.645, .045, .355, 1);
+      transition: all .3s cubic-bezier(.645, .045, .355, 1);
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+      -ms-touch-action: manipulation;
+      touch-action: manipulation;
+      height: 32px;
+      padding: 0 15px;
+      font-size: 14px;
+      border-radius: 4px;
+      color: rgba(0,0,0,0.65);
+      background-color: #fff;
+      border-color: #d9d9d9;
+      color: #fff;
+      background-color: #FF5A44;
+      border-color: #FF5A44;
+      text-shadow: 0 -1px 0 rgba(0,0,0,0.12);
+      -webkit-box-shadow: 0 2px 0 rgba(0,0,0,0.045);
+      box-shadow: 0 2px 0 rgba(0,0,0,0.045);
+  }
+#educationbar {
+    display: none;
+
+    text-align: center;
+}
+#educationbar.seen{
+    display: block;
+}
+#educationbar #scoreS,
+#educationbar #timeT,
+#educationbar #selectC{
+    display: none;
+}
+#educationbar #scoreS.clear,
+#educationbar #timeT.clear,
+#educationbar #selectC.clear{
+    display: block;
+}
+#educationbar #selectC h1{
+    font-size: 30px;
+    color: #000;
+    text-transform: uppercase;
+    font-weight: bolder;
+    text-align: center;
+    margin-bottom: 15px;
+}
+#educationbar #selectC table{
+    width:100%;
+    table-layout: fixed;
+}
+#educationbar #selectC .tbl-header{
+    background-color: rgba(255,255,255,0.3);
+}
+#educationbar #selectC .tbl-content{
+    height:600px;
+    overflow-x:auto;
+    margin-top: 0px;
+    border: 1px solid rgba(255,255,255,0.3);
+}
+#educationbar #selectC th{
+    padding: 20px 15px;
+    text-align: left;
+
+    font-size: 18px;
+    font-weight: bolder;
+    color: #000;
+    text-transform: uppercase;
+}
+#educationbar #selectC td{
+    padding: 15px;
+    text-align: left;
+    vertical-align:middle;
+    font-weight: bolder;
+
+    font-size: 18px;
+    color: #000;
+    border-bottom: solid 1px rgba(255,255,255,0.1);
+}
+
+
+.Course{
+    color: black;
+    width:100%;
+    table-layout: fixed;
+}
+.AllCourse{
+    color: black;
+    width:100%;
+    table-layout: fixed;
+}
+/* follow me template */
+.made-with-love {
+    margin-top: 40px;
+    padding: 10px;
+    clear: left;
+    text-align: center;
+    font-size: 10px;
+    font-family: arial;
+    color: #fff;
+}
+.made-with-love i {
+    font-style: normal;
+    color: #F50057;
+    font-size: 14px;
+    position: relative;
+    top: 2px;
+}
+.made-with-love a {
+    color: #fff;
+    text-decoration: none;
+}
+.made-with-love a:hover {
+    text-decoration: underline;
+}
+#timeT table {
+    opacity: 20%;
+    font-family: 'Open Sans', Helvetica;
+    color: black;
+    border:2px solid #000;
+    border-collapse : collapse;
+}
+#timeT table tr {
+    border:2px solid #000;
+    border-collapse : collapse;
+}
+#timeT table th, table td {
+    border:2px solid #000;
+    border-collapse : collapse;
+}
+
+.days, .time {
+    opacity: 20%;
+    color: black;
+//background: #34495e;
+    text-transform: uppercase;
+    font-size: 0.6em;
+    text-align: center;
+}
+.days{
+    font-size: 1em;
+}
+.time {
+    width: 3em !important;
+    font-size: 1em;
+}
+#scoreS h1{
+    font-size: 30px;
+    color: #000;
+    text-transform: uppercase;
+    font-weight: bolder;
+    text-align: center;
+    margin-bottom: 15px;
+}
+#scoreS table{
+    width:100%;
+    table-layout: fixed;
+}
+#scoreS .tbl-header{
+    background-color: rgba(255,255,255,0.3);
+}
+#scoreS .tbl-content{
+    height:300px;
+    overflow-x:auto;
+    margin-top: 0px;
+    border: 1px solid rgba(255,255,255,0.3);
+}
+#scoreS th{
+    padding: 20px 15px;
+    text-align: left;
+    font-weight: 500;
+    font-size: 12px;
+    color: #000;
+    text-transform: uppercase;
+}
+#scoreS td{
+    padding: 15px;
+    text-align: left;
+    vertical-align:middle;
+    font-weight: 300;
+    font-size: 12px;
+    color: #000;
+    border-bottom: solid 1px rgba(255,255,255,0.1);
+}
+
