删除对话 调整布局

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -11,6 +11,7 @@ body{
 }
 
 .container{
+    left:-12%;
     position: relative;
     width: 75rem;
     
@@ -114,7 +115,7 @@ form .input{
 }
 
 .login #forget{
-    top:35%£»
+    top:35%ï¿½ï¿½
 }
 
 
